--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
+asgiref==3.2.10
 dj-database-url==0.5.0
 Django==3.1.2
+django-crispy-forms==1.11.2
+fontawesome-free==5.15.3
 gunicorn==20.0.4
+Pillow==8.2.0
 psycopg2-binary==2.8.6
-wheel==0.35.1
+pytz==2021.1
+sqlparse==0.4.1
 whitenoise==5.2.0
-
