--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 asgiref==3.2.10
+click==8.0.0
 dj-database-url==0.5.0
 Django==3.1.2
 django-crispy-forms==1.11.2
 fontawesome-free==5.15.3
 gunicorn==20.0.4
+lorem-text==1.5
 Pillow==8.2.0
 psycopg2-binary==2.8.6
 pytz==2021.1
